# Dupic_v2

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.py  layout.cpp  layout.h  main.cpp  scan.cpp  scan.h  vcpkg.json
assets/: icon.icns
core/: types.h
src/: layout.cpp  main.cpp  scan.cpp
